--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             a img{border:none}
             html{font-size:87.5%;line-height:1.57143em}
             html{font-size:14px;line-height:1.6em;-webkit-text-size-adjust:100%}
-            body{background-color:#141414;color:#D3D3D3;text-rendering:optimizeLegibility;}
+            body{background-color:#F4F4F4;color:#4C4C4C;text-rendering:optimizeLegibility;}
             a{color:#EFEFEF;text-decoration:underline;}
             p{line-height:1.9em;font-size:13px;}
-            h1{color:#E5E5E5;font-size:17px;line-height:1.3em;margin-bottom:.78571em}
-            h2{color:#E5E5E5;font-size:15px;line-height:1em;line-height:1.5em;padding:0.5em 0em 0.5em 1em;-webkit-tap-highlight-color: transparent;}
-            h3{color:#E5E5E5;font-size:14px;line-height:1em;padding:0.5em 0em;}
+            h1{color:#000000;font-size:17px;line-height:1.3em;margin-bottom:.78571em}
+            h2{color:#000000;font-size:15px;line-height:1em;line-height:1.5em;padding:0.5em 0em 0.5em 1em;-webkit-tap-highlight-color: transparent;}
+            h3{color:#000000;font-size:14px;line-height:1em;padding:0.5em 0em;}
             .content-wrapper{max-width:46em;margin:0px auto;padding:1.5em 1em}
 	</style>
 </head>
