--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<title>开心三国使用条款和隐私政策</title>
+	<title>三国百科使用条款和隐私政策</title>
 	<style>
             html,body,div,span,h1,h2,h3,h4,h5,h6,p {margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}
             body{-webkit-touch-callout:none;  /*系统默认菜单被禁用*/
@@ -25,8 +25,8 @@
 </head>
 <body>
 	<div class="content-wrapper">
-		<h1>开心三国使用条款和隐私政策</h1>
-		<p>开心三国应用尊重并保护所有使用本应用服务用户的个人隐私权。</p>
+		<h1>三国百科使用条款和隐私政策</h1>
+		<p>三国百科应用尊重并保护所有使用本应用服务用户的个人隐私权。</p>
 		<p>为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息，但本应用将以高度的勤勉、审慎义务对待这些信息。</p>
 		<p>除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。</p>
 		<p>本隐私权政策属于本应用服务使用协议不可分割的一部分。</p>
