--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
+<!-- saved from url=(0038)https://wallpapermaker.github.io/kxsg/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<title>三国百科使用条款和隐私政策</title>
+	<title>三国百科使用条款和免责声明</title>
 	<style>
             html,body,div,span,h1,h2,h3,h4,h5,h6,p {margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}
             body{-webkit-touch-callout:none;  /*系统默认菜单被禁用*/
@@ -22,45 +22,63 @@
             h3{color:#000000;font-size:14px;line-height:1em;padding:0.5em 0em;}
             .content-wrapper{max-width:46em;margin:0px auto;padding:1.5em 1em}
 	</style>
-</head>
+<style>hcfy-result.__hcfy__result__loaded__.__hcfy__result__both__{border: 1px dotted}</style></head>
 <body>
 	<div class="content-wrapper">
-		<h1>三国百科使用条款和隐私政策</h1>
+		<h1>三国百科使用条款和免责声明</h1>
 		<p>三国百科应用尊重并保护所有使用本应用服务用户的个人隐私权。</p>
-		<p>为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息，但本应用将以高度的勤勉、审慎义务对待这些信息。</p>
-		<p>除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。</p>
-		<p>本隐私权政策属于本应用服务使用协议不可分割的一部分。</p>
+        <br>
+		<p>请务必认真阅读和理解本《软件许可使用协议》(以下简称《协议》)中规定的所有权利和限制。除非您接受本《协议》条款否则您无权下载、安装或使用本”软件”及其相关服务。您一旦安装、复制、下载、访问或以其它方式使用本软件产品将视为对本《协议》的接受即表示您同意接受本《协议》各项条款的约束。如果您不同意本《协议》中的条款请不要安装、复制或使用本软件。</p>
 		<br>
-		<h3>1、适用范围</h3>
-		<p>1.1 在您使用本应用时，本应用可能需要您提供的个人注册信息。</p>
-		<p>1.2 在您使用本应用服务时，本应用自动接收并记录的您的设备信息，包括但不限于您的IP地址、使用的语言、访问日期和时间、软硬件特征信息等数据。</p>
-		<p>1.3 本应用通过合法途径从商业伙伴处取得的用户个人数据。 </p>
-		<p>1.4 您了解并同意，以下信息不适用本隐私权政策：</p>
-		<p>违反法律规定或违反本应用规则行为及本应用已对您采取的措施。</p>
+		<h3>1.权利声明</h3>
+		<p>本”软件”的一切知识产权以及与”软件”相关的所有信息内容包括但不限于文字表述及其组合、图标、图饰、图像、图表、色彩、界面设计、版面框架、有关数据、附加程序、印刷材料或电子文档等均为作者所有受著作权法和国际著作权条约以及其他知识产权法律法规的保护。</p>
 		<br>
-		<h3>2、信息使用</h3>
-		<p>2.1 本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。  </p>
-		<p>2.2 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。  </p>
-		<p>2.3 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息。</p>
+		<h3>2.许可范围</h3>
+		<p>2.1下载、安装和使用本软件为免费软件用户可以非商业性、无限制数量地下载、安装及使用本软件。 </p>
+		<p>2.2复制、分发和传播用户可以非商业性、无限制数量地复制、分发和传播本软件产品。但必须保证每一份复制、分发和传播都是完整和真实的,包括所有有关本软件产品的软件、电子文档,版权和商标亦包括本协议。</p>
 		<br>
-		<h3>3、信息披露</h3>
-		<p>在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：</p>
-		<p>3.1 经您事先同意，向第三方披露。  </p>
-		<p>3.2 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息。 </p>
-		<p>3.3 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露。</p>
-		<p>3.4 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露。</p>
-		<p>3.5 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷。  </p>
-		<p>3.6 其它本应用根据法律、法规或者网站政策认为合适的披露。</p>
+		<h3>3.权利限制</h3>
+		<p>3.1禁止反向工程、反向编译和反向汇编用户不得对本软件产品进行反向工程(ReverseEngineer)、反向编译(Decompile)或反向汇编(Disassemble)同时不得改动编译在程序文件内部的任何资源。除法律、法规明文规定允许上述活动外用户必须遵守此协议限制。 </p>
+		<p>3.2组件分割:本软件产品是作为一个单一产品而被授予许可使用,用户不得将各个部分分开用于任何目的。 </p>
+		<p>3.3个别授权:如需进行商业性的销售、复制、分发包括但不限于软件销售、预装、捆绑等必须获得作者的授权和许可。</p>
+		<p>3.4保留权利本协议未明示授权的其他一切权利仍归作者所有用户使用其他权利时必须获得作者的书面同意。</p>
 		<br>
-		<h3>4、信息存储和交换</h3>
-		<p>本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。</p>
+		<h3>4.用户使用须知</h3>
+		<p>4.1本软件仅适用于手机软件。如果用户在安装本软件后因任何原因欲放弃使用可删除本软件。</p>
+        <p>4.2本软件由作者提供产品支持。</p>
+        <p>4.3软件的修改和升级作者保留为用户提供本软件的修改、升级版本的权利。</p>
+        <p>4.4本软件不含有任何旨在破坏用户计算机数据和获取用户隐私信息的恶意代码不含有任何跟踪、监视用户计算机的功能代码不会监控用户网上、网下的行为不会收集用户使用其它软件、文档等个人信息不会泄漏用户隐私。</p>
+        <p>4.5用户应在遵守法律及本协议的前提下使用本软件。用户无权实施包括但不限于下列行为</p>
+        <p style="text-indent:2em;">4.5.1不得删除或者改变本软件上的所有权利管理电子信息;</p>
+        <p style="text-indent:2em;">4.5.2不得故意避开或者破坏著作权人为保护本软件著作权而采取的技术措施;</p>
+        <p style="text-indent:2em;">4.5.3用户不得利用本软件误导、欺骗他人;</p>
+        <p style="text-indent:2em;">4.5.4违反国家规定对计算机信息系统功能进行删除、修改、增加、干扰造成计算机信息系统不能正常运行;</p>
+        <p style="text-indent:2em;">4.5.5未经允许进入计算机信息网络或者使用计算机信息网络资源;</p>
+        <p style="text-indent:2em;">4.5.6未经允许对计算机信息网络功能进行删除、修改或者增加的;</p>
+        <p style="text-indent:2em;">4.5.7未经允许对计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加;</p>
+        <p style="text-indent:2em;">4.5.8破坏本软件系统或网站的正常运行故意传播计算机病毒等破坏性程序;</p>
+        <p style="text-indent:2em;">4.5.9其他任何危害计算机信息网络安全的。</p>
+        <p>4.6不得使用本软件发布违反国家法律的非法广告信息如色情赌博等其造成的一切后果与本作者无关请自觉营造和谐良性的网络营销环境。违法行为一经发现本作者有权终止服务并追究法律责任。</p>
 		<br>
-		<h3>5、信息安全</h3>
-		<p>本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。 </p>
-		<br>
-		<h3>6、本隐私政策的更改</h3>
-		<p>6.1 如果决定更改隐私政策，我们会在本政策中、本应用中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。</p>
-		<p>6.2 本应用保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本应用会通过推送通知的形式告知。</p>
+        <h3>5.免责与责任限制</h3>
+        <p>5.1本软件刊载的所有内容，包括文字、图片、音频、视频、软件、程序、以及网页版式设计等均在网上搜集。</p>
+        <p>5.2本软件提供的内容仅用于个人学习、研究或欣赏。我们不保证内容的正确性。通过使用本内容随之而来的风险与本站无关。</p>
+        <p>5.3本软件内容所有方如不愿意在本软件刊登内容，请及时通知，予以删除。</p>
+        <p>5.4本软件经过详细的测试但不能保证与所有的软硬件系统完全兼容不能保证本软件完全没有错误。如果出现不兼容及软件错误的情况用户可登录软件官网论坛将情况报告作者获得技术支持。如果无法解决兼容性问题用户可以删除本软件。</p>
+        <p>5.5使用本软件产品风险由用户自行承担在适用法律允许的最大范围内对因使用或不能使用本软件所产生的损害及风险包括但不限于直接或间接的个人损害、商业赢利的丧失、贸易中断、商业信息的丢失或任何其它经济损失作者不承担任何责任。</p>
+        <p>5.6对于因电信系统或互联网网络故障、计算机故障或病毒、信息损坏或丢失、计算机系统问题或其它任何不可抗力原因而产生损失作者不承担任何责任。</p>
+        <p>5.7用户违反本协议规定对作者公司造成损害的。作者有权采取包括但不限于中断使用许可、停止提供服务、限制使用、法律追究等措施。</p>
+        <br>
+        <h3>6.法律及争议解决</h3>
+        <p>6.1本协议适用中华人民共和国法律。</p>
+        <p>6.2因本协议引起的或与本协议有关的任何争议各方应友好协商解决;协商不成的任何一方均可将有关争议提交至杭州仲裁委员会并按照其届时有效的仲裁规则仲裁;仲裁裁决是终局的对各方均有约束力。</p>
+        <br>
+        <h3>7.其他条款</h3>
+        <p>7.1如果本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力或违反任何适用的法律则该条款被视为删除但本协议的其余条款仍应有效并且有约束力。</p>
+        <p>7.2作者有权根据有关法律、法规的变化以及公司经营状况和经营策略的调整等修改本协议。修改后的协议会随附于新版本软件。当发生有关争议时以最新的协议文本为准。如果不同意改动的内容用户可以自行删除本软件。如果用户继续使用本软件则视为您接受本协议的变动。</p>
+        <p>7.3本协议的一切解释权与修改权归作者。</p>
+        <br>
 	</div>
-</body>
-</html>
+
+
+</body><div style="all: initial;"><div id="__hcfy__" style="all: initial;"></div></div></html>
